feat: add component function

--- a/packages/components/src/sender/styles/index.less
+++ b/packages/components/src/sender/styles/index.less
@@ -1,3 +1,5 @@
 @import './variables.less';
 @import './sender.less';
-@import './animations.less'; 
+@import './animations.less';
+@import './action-buttons.less';
+@import './slots.less';
