refactor: update SVG icons and styles for consistency

--- a/packages/components/src/question/index.less
+++ b/packages/components/src/question/index.less
@@ -53,8 +53,7 @@ body.tr-modal-open {
 
   /* 按钮图标 */
   & > svg {
-    width: 28px;
-    height: 28px;
+    font-size: 28px;
     border-radius: 50%;
     fill: #ffffff;
   }
@@ -343,9 +342,8 @@ body.tr-modal-open {
     box-shadow: var(--tr-question-common-item-shadow);
     transition: var(--tr-question-hover-transition);
 
-    & > svg {
-      width: 16px;
-      height: 16px;
+    & svg {
+      font-size: 16px;
     }
 
     /* 悬停效果 */
@@ -394,9 +392,7 @@ body.tr-modal-open {
 
   /* 按钮图标 */
   & > svg {
-    width: 1em;
-    height: 1em;
-    font-size: 32px;
+    font-size: 26px;
     border-radius: 50%;
     fill: #ffffff;
   }
