--- a/packages/components/src/sender/vars.less
+++ b/packages/components/src/sender/vars.less
@@ -17,7 +17,7 @@
   --tr-sender-padding-bottom: 10px;
   --tr-sender-padding-left: 24px;
   --tr-sender-gap: 8px;
-  --tr-sender-input-height: 100px;
+  --tr-sender-input-height: 26px;
   --tr-sender-input-min-height: 60px;
   --tr-sender-icon-size: 22px;
   --tr-sender-icon-size-small: 18px;
@@ -48,7 +48,7 @@
 
   // 内容区域 (Content)
   --tr-sender-content-min-width: 180px;
-  --tr-sender-content-padding: 15px 10px 10px 24px;
+  --tr-sender-content-padding: 15px 10px 12px 24px;
   --tr-sender-content-padding-with-prefix: 15px 10px 10px 8px;
   --tr-sender-content-flex-grow: 1;
 
@@ -68,7 +68,7 @@
 
 /* 暗色主题 */
 .theme-dark,
-[data-theme="dark"] {
+[data-theme='dark'] {
   --tr-sender-border-color: #4c4d4f;
   --tr-sender-bg-color: #1c1c1c;
   --tr-sender-text-color: #ffffff;
