fix: update component styles

--- a/packages/components/src/suggestion/index.less
+++ b/packages/components/src/suggestion/index.less
@@ -89,6 +89,7 @@
   background-color: var(--tr-suggestion-modal-background-color);
   max-height: var(--tr-suggestion-modal-max-height);
   width: 100%;
+  max-width: 600px;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -168,7 +169,6 @@
     border: 1px solid transparent;
     height: var(--tr-suggestion-category-height);
     padding: 10px 16px;
-    margin-bottom: 8px;
     color: var(--tr-suggestion-tab-text);
     transition: var(--tr-suggestion-hover-transition);
     display: flex;
@@ -367,6 +367,7 @@
   display: flex;
   flex: 1;
   position: relative;
+  width: 90%;
 
   &_content {
     display: flex;
@@ -381,7 +382,6 @@
     left: 0;
     width: 100%;
     z-index: 10;
-    margin-bottom: 8px;
   }
 
   &_expanded-area {
