--- a/packages/components/src/question/index.less
+++ b/packages/components/src/question/index.less
@@ -392,13 +392,16 @@ body.tr-modal-open {
 
   /* 按钮图标 */
   & > svg {
-    font-size: 26px;
+    font-size: 20px;
+    background-color: #fff;
+    color: rgb(89, 89, 89);
+    box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.15);
     border-radius: 50%;
-    fill: #ffffff;
+    transition: background-color 0.3s ease;
   }
 
   & > svg:hover {
-    fill: #f5f5f5;
+    background-color: #f5f5f5;
   }
 }
 
