feat: update styles and integrated sender component case

--- a/packages/components/src/suggestion/vars.less
+++ b/packages/components/src/suggestion/vars.less
@@ -74,8 +74,8 @@
   --tr-suggestion-item-font-weight: 500;
   --tr-suggestion-line-height: 1.5;
   --tr-suggestion-item-line-height: 22px;
-  --tr-suggestion-item-extra-font-size: 0.85em;
-  --tr-suggestion-item-extra-color: #888888;
+  --tr-suggestion-item-extra-font-size: 14px;
+  --tr-suggestion-item-extra-color: #191919;
 
   /* ----------------- 特效变量 ----------------- */
   /* 阴影 */
