--- a/packages/components/src/suggestion/index.less
+++ b/packages/components/src/suggestion/index.less
@@ -432,23 +432,23 @@
  * 支持悬停效果和溢出文本处理
  */
   &_item {
-    width: 100px;
+    width: 136px;
     text-overflow: ellipsis;
     overflow: hidden;
     display: flex;
     align-items: center;
-    gap: 8px;
+    gap: 5px;
     white-space: nowrap;
     color: #191919;
     border: none;
     background: #fff;
-    margin: 1px 8px 4px 0;
+    margin: 4px 8px 4px 0;
     cursor: pointer;
     text-decoration: none;
-    height: 22px;
+    height: 32px;
     padding: 5px 16px;
-    border-radius: 16px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 26px;
+    box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.04);
     transition: all 0.3s ease;
 
     & > svg {
@@ -458,7 +458,7 @@
 
     /* 悬停效果 */
     &:hover {
-      background-color: #f5f5f5;
+      background: rgba(0, 0, 0, 0.08);
       transform: translateY(-1px);
     }
 
@@ -468,7 +468,7 @@
     }
 
     &_text {
-      width: 87px;
+      width: 84px;
     }
   }
 }
