feat: update file-card status and relative docs

--- a/packages/components/src/attachments/index.less
+++ b/packages/components/src/attachments/index.less
@@ -35,7 +35,7 @@
     &--scrollX {
       flex-direction: row;
       overflow-x: auto;
-      padding-bottom: 8px;
+      padding: 8px 0;
 
       &::-webkit-scrollbar {
         height: 6px;
