fix: add retry, preview and download function

--- a/packages/components/src/attachments/index.less
+++ b/packages/components/src/attachments/index.less
@@ -199,13 +199,9 @@
     box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.08);
   }
 
-  &.error {
-    background-color: #ffebee;
-  }
-
   &--uploading {
     .tr-file-card__status {
-      color: @primary-blue;
+      color: #808080;
     }
   }
 
@@ -373,7 +369,7 @@
     }
 
     &--info {
-      color: @primary-blue;
+      color: #808080;
     }
   }
 }
