--- a/packages/components/src/sender/vars.less
+++ b/packages/components/src/sender/vars.less
@@ -5,10 +5,11 @@
   --tr-sender-bg-color: #fff;
   --tr-sender-text-color: #303133;
   --tr-sender-text-color-secondary: #909399;
+  --tr-sender-text-color-tertiary: #808080;
   --tr-sender-error-color: #f56c6c;
   --tr-sender-input-disabled-bg-color: #f0f0f0;
-  --tr-sender-word-limit-color: #808080;
   --tr-sender-button-icon-color: #5e7ce0;
+  --tr-sender-link-color: #1476FF;
 
   // 尺寸
   --tr-sender-border-radius: 28px;
