fix: update docs and examples

--- a/packages/components/src/sender/index.less
+++ b/packages/components/src/sender/index.less
@@ -44,7 +44,7 @@
     background-color: var(--tr-sender-bg-color);
     color: var(--tr-sender-text-color);
     min-height: var(--tr-sender-input-height); // 固定高度以减少跳动
-    line-height: 26px; // 行高保持一致
+    line-height: var(--tr-sender-textarea-line-heigh); // 行高保持一致
 
     &::placeholder {
       color: var(--tr-sender-text-color-secondary);
